; ModuleID = '/home/carl/AnghaBench/git/extr_delta-islands.c_island_bitmap_set.c'
source_filename = "/home/carl/AnghaBench/git/extr_delta-islands.c_island_bitmap_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.island_bitmap = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.island_bitmap*, i32)* @island_bitmap_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @island_bitmap_set(%struct.island_bitmap* %0, i32 %1) #0 {
  %3 = alloca %struct.island_bitmap*, align 8
  %4 = alloca i32, align 4
  store %struct.island_bitmap* %0, %struct.island_bitmap** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @ISLAND_BITMAP_MASK(i32 %5)
  %7 = load %struct.island_bitmap*, %struct.island_bitmap** %3, align 8
  %8 = getelementptr inbounds %struct.island_bitmap, %struct.island_bitmap* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i64 @ISLAND_BITMAP_BLOCK(i32 %10)
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %6
  store i32 %14, i32* %12, align 4
  ret void
}

declare dso_local i32 @ISLAND_BITMAP_MASK(i32) #1

declare dso_local i64 @ISLAND_BITMAP_BLOCK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
